@@ -174,6 +174,15 @@ for more information.  This task has been tested with jsch-0.1.2 and later.</p>
     server that doesn't support scp1. <em>since Ant 1.7</em></td>
     <td valign="top" align="center">No; defaults to false.</td>
   </tr>
+  <tr>
+    <td valign="top">preserveLastModified</td>
+    <td valign="top">Determines whether the last modification
+    timestamp of downloaded files is preserved.  It only works when
+    transferring from a remote to a local system and probably doesn't
+    work with a server that doesn't support SSH2.  <em>since Ant
+    1.8.0</em></td>
+    <td valign="top" align="center">No; defaults to false.</td>
+  </tr>
 </table>
 <h3>Parameters specified as nested elements</h3>
 
